src/Narcissus/Examples/Errors/FormatList/MissingInvariant.v
From Fiat.Narcissus Require Import Examples.TutorialPrelude.
Require Import Fiat.Narcissus.Automation.Error.

Record msg := { data : list (word 8) }.
Definition format :=
  format_nat 8 ◦ length ◦ data ++
  format_list format_word ◦ data.
Definition invariant (_ : msg) := True.

Definition dec : Maybe (CorrectAlignedDecoderFor invariant format).
Proof.
  maybe_synthesize_aligned_decoder.
  Show Proof.
Defined.
